design tasks pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>SadnaApp | <%= @page_title %></title>
+  <title>Eazy Task<%= @page_title %></title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
@@ -19,9 +19,11 @@
   <!-- Custom styles for this template -->
   <%= stylesheet_link_tag "site.css" %>
   <link href='http://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'>
-  <style>
+  <<style>
 
-      h1 {text-align:center;font-family: 'Nixie One', cursive;}
+      /*h1 {text-align:center;font-family: 'Nixie One', cursive;}*/
+      h1{ text-align:center; color: #5a5a5a}
+      h2{ color: #5a5a5a}
       body {
           font-family: 'Varela Round', sans-serif;
           font-size: 14px;
