--- a/app/assets/stylesheets/site.css
+++ b/app/assets/stylesheets/site.css
@@ -18,7 +18,7 @@ body {
 body {
     padding-top: 40px;
     padding-bottom: 40px;
-    background-color: #eee;
+    background-color: #eeeeee;
 }
 
 .form-signin {
