--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,4 +1,5 @@
-
+<div class="row">
+  <div class="col-md-5">
     <%= form_for(@task) do |f| %>
       <% if @task.errors.any? %>
         <div id="error_explanation">
@@ -37,11 +38,9 @@
           <%= f.collection_select(:project_id , Project.all, :id, :name, {}, {:class=>"form-control"}) %>
         </div>
 
-
         <div class="field">
           <%= f.label :assignee %><br>
           <%= collection_select(:task, :assignee, User.all, :id, :full_name, {}, {:class=>"form-control"}) %>
-
         </div>
 
       <div class="field">
@@ -70,10 +69,13 @@
          </p><br>
 
        </div>
-      <div class="actions">
-        <p>
-          <%= f.submit(:class=>"btn btn-lg btn-primary",:href=>"../../components/#navbar" ,:role => "button") %>
-
-        </p>
-      </div>
+        <div class="actions">
+          <p>
+            <%= f.submit(:class=>"btn btn-lg btn-primary",:href=>"../../components/#navbar" ,:role => "button") %>
+            <%= link_to 'Back', tasks_path, :class=>"btn btn-lg btn-default", :type=>"button" %>
+          </p>
+        </div>
     <% end %>
+    </div>
+   </div>
+</div>
