--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,3 +1,5 @@
-<h1>New task</h1>
-<%= render 'form' %>
-<%= link_to 'Back', tasks_path, :class=>"btn btn-lg btn-default", :type=>"button" %>
+<div class="container">
+    <h2 class="form-signin-heading">New task</h2><br>
+    <%= render 'form' %>
+
+</div>
