landing page design

--- a/app/assets/stylesheets/signin.css
+++ b/app/assets/stylesheets/signin.css
@@ -43,3 +43,11 @@ body {
     border-top-left-radius: 0;
     border-top-right-radius: 0;
 }
+
+.form-signin.form-signin-left {
+    margin: 0;
+    padding: 0;
+}
+.checkbox.signin-checkbox{
+    color: #ffffff;
+}
