--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -58,6 +58,7 @@
       </div>
     </div>
 
+    <%= link_to 'New Project', new_project_path,:class =>"btn btn-primary btn-default",id:"new_project_btn" %>
     <br>
     <!--<div class = "actions">
       <%= link_to("it operating", {:controller => 'tasks', :project_id => '2'}) %>
