--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,16 +19,17 @@
   <!-- Custom styles for this template -->
   <%= stylesheet_link_tag "site.css" %>
   <link href='http://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'>
-  <<style>
+  <style>
 
       /*h1 {text-align:center;font-family: 'Nixie One', cursive;}*/
       h1{ text-align:center; color: #5a5a5a}
       h2{ color: #5a5a5a}
       body {
           font-family: 'Varela Round', sans-serif;
-          font-size: 14px;
+          font-size: 20px;
       }
   </style>
+
 </head>
 <body>
 
@@ -46,8 +47,10 @@
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li><%= link_to 'TODO', tasks_path %></li>
-        <li><%= link_to 'DOING', tasks_path %></li>
+        <li id="todo_counter"></li>
+        <li><%= link_to 'TODO' , tasks_path%></li>
+        <li id="doing_counter"></li>
+        <li><%= link_to 'DOING', tasks_path%></li>
         <li><%= link_to 'DONE', tasks_path %></li>
         <!--<li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">SORT<b class="caret"></b></a>
@@ -66,10 +69,13 @@
           <%= link_to 'New Task', new_task_path ,:class =>"btn btn-primary btn-default", :role => "button",id:"menu_new_task"  %>
         </li>
         <li>
-          <%= link_to 'Assigned To Me', new_task_path ,:class =>"btn btn-success btn-default", :role => "button",id:"menu_assigned_to_me"  %>
+
+          <button class="btn btn-success btn-default" id="menu_assigned_to_me">Assigned To Me</button>
+          <!--%= link_to 'Assigned To Me',:class =>"btn btn-success btn-default", :role => "button",id:"menu_assigned_to_me"  %-->
         </li>
         <li>
-          <%= link_to 'Created By Me', new_task_path ,:class =>"btn btn-info btn-default", :role => "button",id:"menu_created_by_me"  %>
+          <button class="btn btn-info btn-default" id="menu_created_by_me">Created By Me</button>
+          <!--%= link_to 'Created By Me', new_task_path ,:class =>"btn btn-info btn-default", :role => "button",id:"menu_created_by_me"  %-->
         </li>
       </ul>
 
@@ -77,7 +83,7 @@
         <!--check if user logged in-->
         <div>
           <li><% if user_signed_in? %>
-                <%= current_user.full_name %><br>
+                <span id="login_name"><%= current_user.full_name %></span><br>
                 <%= link_to 'Click to logout', destroy_user_session_path, :method => :delete %>
             <% else %>
                 You are not signed in<br>
@@ -105,6 +111,10 @@
 
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript">
+    window.onload = countTodo();
+    window.onload = countDoing();
+</script>
 <%= javascript_include_tag "jquery.tablesorter.js" %>
 <%= javascript_include_tag "bootstrap.min.js" %>
 <%= javascript_include_tag "bootstrap-datepicker.js" %>
