Project linking dynamically. Filter Tasks by status.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,11 +47,12 @@
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
+
         <li id="todo_counter"></li>
-        <li><%= link_to 'TODO' , tasks_path%></li>
+        <li><%= link_to 'TODO', tasks_path(:status => "TODO", :project_id=>params[:project_id])  %></li>
         <li id="doing_counter"></li>
-        <li><%= link_to 'DOING', tasks_path%></li>
-        <li><%= link_to 'DONE', tasks_path %></li>
+        <li><%= link_to 'DOING', tasks_path(:status => 'DOING',:project_id => params[:project_id]) %></li>
+        <li><%= link_to 'DONE', tasks_path(:status => 'DONE',:project_id => params[:project_id]) %></li>
         <!--<li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">SORT<b class="caret"></b></a>
           <ul class="dropdown-menu">
