--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -53,10 +53,8 @@
 
       </div>
       <div class="field">
-
         <%= f.label :due_date %><br>
-        <%= f.text_field :due_date, :id=>"due_date" ,:class=>"form-control"%>
-        <!--<textarea type="text" name="task[title]" class="form-control" id="date" required autofocus><%= @task.due_date  %></textarea>-->
+        <%= f.text_field :due_date, :id=>'due_date' ,:class=>'form-control' %>
       </div >
 
        <div class="field">
