--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -1,3 +1,22 @@
 // Place all the styles related to the projects controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.shap {
+  color: blue;
+  width: 100px;
+  height: 50px;
+  background-color: Menu;
+  border: dotted;
+
+}
+
+.project .admin{
+  display: none;
+}
+.project.hover .admin{
+  display: table-cell;
+}
+.project.hover{
+  background: #ececec;
+}
