--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,8 +1,6 @@
-
-
-<div class="container">
-  <div class="page-header">
-    <h1>Tasks</h1>
+<div>
+  <div class="task">
+    <h1><%= params[:project_id]  %></h1>
   </div>
 <div class="table-responsive">
   <table id="myTable" class="table table-striped tablesorter col-lg-1" coler="black">
