--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -27,11 +27,17 @@
     margin-top: 7%;
     color: #ffffff;
 }
+#menu_all_task{
+    padding: 8px;
+    margin-top: 7%;
+    color: #398439;
+}
 .project_btns{
     margin-top: 7%;
     color: #ffffff;
     border-color: #A0A0A0;
 }
+#menu_all_task:hover
 #menu_new_task:hover,
 #menu_assigned_to_me:hover,
 #menu_created_by_me:hover{
@@ -47,8 +53,8 @@
     margin-top: 5%;
     color: #ffffff;
 }
-#todo_counter,
-#doing_counter{
+
+#todo_counter{
     color: dodgerblue;
     font-weight: bold;
     margin-top: 2.6%;
