--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,6 @@
           font-size: 20px;
       }
   </style>
-
 </head>
 <body>
 
@@ -48,11 +47,10 @@
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
 
-        <li id="todo_counter"></li>
         <li><%= link_to 'TODO', tasks_path(:status => "TODO", :project_id=>params[:project_id])  %></li>
-        <li id="doing_counter"></li>
-        <li><%= link_to 'DOING', tasks_path(:status => 'DOING',:project_id => params[:project_id]) %></li>
-        <li><%= link_to 'DONE', tasks_path(:status => 'DONE',:project_id => params[:project_id]) %></li>
+        <li id="todo_counter"></li>
+        <li><%= link_to 'DOING', tasks_path(:status => "DOING",:project_id => params[:project_id]) %></li>
+        <li><%= link_to 'DONE', tasks_path(:status => "DONE",:project_id => params[:project_id]) %></li>
         <!--<li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">SORT<b class="caret"></b></a>
           <ul class="dropdown-menu">
@@ -70,6 +68,9 @@
           <%= link_to 'New Task', new_task_path ,:class =>"btn btn-primary btn-default", :role => "button",id:"menu_new_task"  %>
         </li>
         <li>
+          <%= link_to 'All Tasks', tasks_path,:class =>"btn btn-primary btn-default", :role => "button",id:"menu_all_task" %>
+        </li>
+        <li>
 
           <!--<button class="btn btn-success btn-default" id="menu_assigned_to_me">Assigned To Me</button>-->
           <!--%= link_to 'Assigned To Me',"#" ,:class =>"btn btn-success btn-default", :role => "button",id:"menu_assigned_to_me"%-->
@@ -79,6 +80,7 @@
           <a class="btn btn-info btn-default" id="menu_created_by_me">Created By Me</a>
           <!--%= link_to 'Created By Me', new_task_path ,:class =>"btn btn-info btn-default", :role => "button",id:"menu_created_by_me"  %-->
         </li>
+
       </ul>
 
       <ul class="nav pull-right" id="login">
