can add file to the task add name to page task

--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -64,14 +64,9 @@
        </div>
 
        <div class="field">
-         <%= label_tag :doc, 'Notes (optional)' %>
+         <%= label_tag :doc, 'Attachment (optional)' %>
          <%= file_field_tag :doc %>
        </div><br>
-      <!-- <div class=field">
-         <label>attachment</label>
-         <%= f.file_field :file  %>
-         <%=  f.hidden_field :file_name, :value => "2" %>
-       </div><br>-->
 
 
        <div class="actions">
