--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,7 +65,7 @@
           </ul>
         </li>-->
         <li>
-          <%= link_to 'New Task', new_task_path ,:class =>"btn btn-primary btn-default", :role => "button",id:"menu_new_task"  %>
+          <%= link_to 'New Task', new_task_url ,:class =>"btn btn-primary btn-default", :role => "button",id:"menu_new_task"  %>
         </li>
         <li>
           <%= link_to 'All Tasks', tasks_path,:class =>"btn btn-primary btn-default", :role => "button",id:"menu_all_task" %>
@@ -73,12 +73,10 @@
         <li>
 
           <!--<button class="btn btn-success btn-default" id="menu_assigned_to_me">Assigned To Me</button>-->
-          <!--%= link_to 'Assigned To Me',"#" ,:class =>"btn btn-success btn-default", :role => "button",id:"menu_assigned_to_me"%-->
-          <a class="btn btn-success btn-default" id="menu_assigned_to_me">Assigned To Me</a>
+          <%= link_to 'Assigned To Me',"#" ,:class =>"btn btn-success btn-default", :role => "button",id:"menu_assigned_to_me"%>
         </li>
         <li>
-          <a class="btn btn-info btn-default" id="menu_created_by_me">Created By Me</a>
-          <!--%= link_to 'Created By Me', new_task_path ,:class =>"btn btn-info btn-default", :role => "button",id:"menu_created_by_me"  %-->
+          <%= link_to 'Created By Me', "#" ,:class =>"btn btn-info btn-default", :role => "button",id:"menu_created_by_me"  %>
         </li>
 
       </ul>
