--- a/app/assets/stylesheets/site.css
+++ b/app/assets/stylesheets/site.css
@@ -62,6 +62,9 @@ body {
     background-position: center center;
     background-attachment: fixed;
     background-size: cover;
+    max-width: 100%;
+    height: auto;
+    width: auto\9;
 }
 .bg-title{
     color: #ffffff;
