--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -4,7 +4,7 @@
 
 .shap {
   td:nth-child(1) {
-    background: #cccccc;
+    background: #f9f9f9;
     border-spacing:0.5rem;
     padding: 0.5rem;
     border:1px solid #BBBBBB;
