--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,9 +68,10 @@
         <li>
           <%= link_to 'New Task', new_task_url ,:class =>"btn btn-primary btn-default", :role => "button",id:"menu_new_task"  %>
         </li>
-        <li>
-          <%= link_to 'All Tasks', tasks_path,:class =>"btn btn-primary btn-default", :role => "button",id:"menu_all_task" %>
-        </li>
+
+        <!--<li>
+          <%= link_to 'All Tasks', tasks_path,:class =>"btn btn-warning btn-default", :role => "button",id:"menu_all_task" %>
+        </li>-->
         <li>
 
           <!--<button class="btn btn-success btn-default" id="menu_assigned_to_me">Assigned To Me</button>-->
