--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-2">
-      <h2 class="page-header">Projects</h2>
+      <center><h2 class="page-header">Projects</h2></center>
       <table>
         <thead>
         <tr>
@@ -17,7 +17,16 @@
         <tbody>
         <% @projects.each do |project| %>
             <tr class="shap">
-              <td><%= link_to project.name, tasks_path(:project_id => project.id) %></td>
+              <td>
+                <%= link_to project.name, tasks_path(:project_id => project.id) %>
+
+                <div class="progress">
+                  <div class="progress-bar progress-bar-success " role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 40%;" >
+                    <%= project.projectProgress %>
+                  </div>
+                </div>
+
+              </td>
               <td hidden="hidden"><%= project.start_date %></td>
               <td hidden="hidden"><%= project.due_date %></td>
               <td hidden="hidden"><%= link_to 'Show', project %></td>
@@ -41,4 +50,5 @@
     <%= link_to 'New Project', new_project_path,:class =>"btn btn-lg btn-primary"%>
     <%= link_to 'All Tasks', tasks_path,:class =>"btn btn-lg btn-default" %>
   </div>
+
 </div>
