changed date and small things

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -101,7 +101,7 @@
     </div><!--/.nav-collapse -->
   </div>
 </div>
-
+ <!--<%=  submit_tag("", :accesskey => "R")  %>-->
 <div class="container">
   <!--p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p-->
