--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="row">
     <div class="col-md-2">
-      <center><h2 class="page-header">Projects</h2></center>
       <table>
+        <h2 class="page-header">Projects</h2>
         <thead>
         <tr>
           <th hidden="hidden">Name</th>
