--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -13,7 +13,7 @@
     background: #cccccc;
     border-spacing:0.5rem;
     padding: 0.5rem;
-    border:1px solid #BBBBBB;
+    border:1px solid #245269;
   }
   td:nth-child(3) {
     background: #cccccc;
