--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -20,18 +20,26 @@
         </div>
         <div class="field">
           <%= f.label :start_date %><br>
-          <%= f.text_field :start_date, :id=>"start_date" ,:class=>"form-control"%>
-          <!--%= f.date_select :start_date %-->
+          <% if @project.start_date%>
+              <%= f.date_field :start_date,value: @project.start_date,:class=>'form-control'   %>
+          <% else %>
+              <%= f.date_field :start_date,value: Date.today  ,:class=>'form-control'   %>
+          <% end %>
         </div>
         <div class="field">
           <%= f.label :due_date %><br>
-          <%= f.text_field :due_date, :id=>"due_date" ,:class=>"form-control"%>
-          <!--%= f.date_select :due_date %-->
+          <% if @project.due_date%>
+              <%= f.date_field :due_date,value: @project.due_date,:class=>'form-control'   %>
+          <% else %>
+              <%= f.date_field :due_date,value: Date.today  ,:class=>'form-control'   %>
+          <% end %>
         </div>
         <br>
         <div class="actions">
-          <!--%= f.submit %-->
+          <p>
           <%= f.submit(:class=>"btn btn-lg btn-primary",:href=>"../../components/#navbar" ,:role => "button") %>
+          <%= link_to 'Back', projects_path,:class=>"btn btn-lg btn-default", :type=>"button" %>
+          </p>
         </div>
     <% end %>
   </div>
