--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
-    <h2 class="form-signin-heading">New task</h2><br>
+  <h1>New task</h1>
+   <!-- <h2 class="form-signin-heading">New task</h2><br>-->
     <%= render 'form' %>
 
 </div>
