--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -2,6 +2,7 @@
   <div class="row">
     <div class="col-md-2">
       <table>
+
         <h2 class="page-header">Projects</h2>
         <thead>
         <tr>
@@ -21,7 +22,7 @@
                 <%= link_to project.name, tasks_path(:project_id => project.id) %>
 
                 <div class="progress">
-                  <div class="progress-bar progress-bar-success " role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 40%;" >
+                  <div class="progress-bar progress-bar-success " role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: <%= project.projectProgress %>;" >
                     <%= project.projectProgress %>
                   </div>
                 </div>
@@ -34,6 +35,7 @@
               <td class="admin"><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
             </tr>
         <% end %>
+
         </tbody>
       </table>
 
