--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -19,6 +19,10 @@
         <% end %>
     <% end %>
   </div>
-  <%= render 'task_table' %>
+
+    <div>
+        <%= render 'task_table' %>
+    </div>
+
 
 </div>
