--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -52,5 +52,6 @@
     </p>
 <% end %>
 
-<%= link_to 'Edit', edit_task_path(@task) %> |
-<%= link_to 'Back', tasks_path %>
+<%= link_to 'Back', tasks_path, :class =>"btn btn-lg btn-default"%>
+<%= link_to 'Edit', edit_task_path(@task), :class =>"btn btn-lg btn-default" %> 
+<%= link_to 'Destroy', @task, method: :delete, data: { confirm: 'Are you sure?' },:class =>"btn btn-lg btn-default" %>
