--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -22,8 +22,8 @@
                 <%= link_to project.name, tasks_path(:project_id => project.id) %>
 
                 <div class="progress">
-                  <div class="progress-bar progress-bar-success " role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: <%= project.projectProgress %>;" >
-                    <%= project.projectProgress %>
+                  <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: <%= project.projectProgress %>;" >
+                   <%= project.projectProgress %>
                   </div>
                 </div>
 
