--- a/app/views/tasks/_task_table.html.erb
+++ b/app/views/tasks/_task_table.html.erb
@@ -26,10 +26,13 @@
             <td hidden="hidden"><%= task.id %></td>
             <td><%= link_to task.title, task %></td>
             <td><%= task.priority %></td>
-
+            <td>
+              <table class="fixed-table">
+                <tr>
                   <td><%= task.description %></td>
-
-
+                </tr>
+              </table>
+            </td>
             <td><%= task.project.projectName %></td>
             <td hidden="hidden"><%= task.project_id %></td>
             <td class="assignee"><%= task.doer.full_name %></td>
