--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -26,13 +26,13 @@
                     <%= project.projectProgress %>
                   </div>
                 </div>
-
+                <div class="admin"><%= link_to 'Edit|', edit_project_path(project) %><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></div>
               </td>
               <td hidden="hidden"><%= project.start_date %></td>
               <td hidden="hidden"><%= project.due_date %></td>
               <td hidden="hidden"><%= link_to 'Show', project %></td>
-              <td class="admin"><%= link_to 'Edit|', edit_project_path(project) %></td>
-              <td class="admin"><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+              <td hidden="hidden"><%= link_to 'Edit|', edit_project_path(project) %></td>
+              <td hidden="hidden"><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
             </tr>
         <% end %>
 
@@ -49,7 +49,7 @@
   </div>
 
   <div class="project_btns">
-    <%= link_to 'New Project', new_project_path,:class =>"btn btn-lg btn-primary"%>
+    <%= link_to 'New Project', new_project_path,:class =>"btn btn-lg btn-default"%>
     <%= link_to 'All Tasks', tasks_path,:class =>"btn btn-lg btn-default" %>
   </div>
 
