fix assigned/created by me count tasks on bar bug + design issuse

--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -35,3 +35,12 @@
   text-overflow: ellipsis;
 
 }
+.task_btns{
+  color: #333333 !important;
+}
+.icons{
+  color: dodgerblue;
+}
+.icons:hover{
+  color: black;
+}
