--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
 
 <!-- Fixed navbar -->
 <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-  <div class="container">
+  <div class="container container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
         <span class="sr-only">Toggle navigation</span>
@@ -65,24 +65,27 @@
       </ul>
 
 
-      <ul class="navber pull-right">
-        <div class="navbar-right">
-          <%= link_to 'Help', '/projects/help',:class =>"default" %>
-          <%= link_to 'About', '/projects/about',:class =>"default" %>
-        </div>
+      <ul class="nav navbar-nav navbar-right">
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-info-sign info_icon"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li> <%= link_to 'Help', '/projects/help',:class =>"default" %></li>
+            <li> <%= link_to 'About', '/projects/about',:class =>"default" %></li>
+          </ul>
+        </li>
       </ul>
 
       <ul class="navber pull-right" id="login">
 
         <!--check if user logged in-->
         <div>
-          <li><% if user_signed_in? %>
+            <% if user_signed_in? %>
                 <span id="login_name"><%= current_user.full_name %></span><br>
                 <%= link_to 'Click to logout', destroy_user_session_path, :method => :delete %>
             <% else %>
                 You are not signed in<br>
                 <%= link_to 'Login', new_user_session_path %>
-            <% end %></li>
+            <% end %>
 
         </div>
 
