--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -52,7 +52,12 @@
     </p>
 <% end %>
 
-
-<%= link_to 'Back', :back, :class =>"btn btn-lg btn-default"%>
-<%= link_to 'Edit', edit_task_path(@task), :class =>"btn btn-lg btn-default" %>
-<%= link_to 'Destroy', @task, method: :delete, data: { confirm: 'Are you sure?' },:class =>"btn btn-lg btn-default" %>
+<%= link_to :back, :class =>"btn btn-lg btn-default task_btns" do %>
+    <i class="glyphicon glyphicon-arrow-left icons"></i> Back
+<% end %>
+<%= link_to edit_task_path(@task), :class =>"btn btn-lg btn-default task_btns" do %>
+    <i class="glyphicon glyphicon-edit icons"></i> Edit
+<% end %>
+<%= link_to @task, method: :delete, data: { confirm: 'Are you sure?' },:class =>"btn btn-lg btn-default task_btns" do %>
+    <i class="glyphicon glyphicon-trash icons"></i> Destroy
+<% end %>
